--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,14 @@ hr {
     cursor: pointer;
 }
 
+.date-picker{
+    background: #fff; 
+    cursor: pointer; 
+    padding: 5px 10px; 
+    border: 1px solid #ccc; 
+    width: 100%
+}
+
 .button1 {
     padding: 5px 24px;
 }
