--- a/css/style-login.css
+++ b/css/style-login.css
@@ -90,3 +90,24 @@ background: linear-gradient(to bottom, #4CA1AF, #2C3E50); /* W3C, IE 10+/ Edge, 
         #problem{
             color:red;
         }
+        
+#blackdrop {
+    transition: opacity 450ms;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: .5;
+    z-index: 8888;
+    display:none;
+}
+.loading-animate {
+    top: 50%;
+    position: relative;
+    left: 50%;
+    color: #00b6ff;
+}
