--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,6 @@
     font-weight: normal;
     font-style: normal;
 }
-<<<<<<< HEAD
-=======
 body {
     -webkit-font-smoothing: subpixel-antialiased;
     text-rendering:optimizeLegibility;
@@ -29,7 +27,6 @@ body {
 b, strong {
     font-weight: 500 ;
 }
->>>>>>> 799d804985fca710084fa8e49b32d7d926119121
 
 p,
 h1,
@@ -43,11 +40,7 @@ span {
 }
 
 thead {
-<<<<<<< HEAD
-    font-weight: bold;
-=======
     font-weight: 500;
->>>>>>> 799d804985fca710084fa8e49b32d7d926119121
 }
 
 td {
@@ -79,8 +72,6 @@ hr {
     cursor: pointer;
 }
 
-<<<<<<< HEAD
-=======
 .date-picker{
     background: #fff; 
     cursor: pointer; 
@@ -89,7 +80,6 @@ hr {
     width: 100%
 }
 
->>>>>>> 799d804985fca710084fa8e49b32d7d926119121
 .button1 {
     padding: 5px 24px;
 }
@@ -175,11 +165,7 @@ fieldset[disabled] .form-control {
 
 .border-disable td {
     border: none;
-<<<<<<< HEAD
-    font-weight: bold;
-=======
     font-weight: 500;
->>>>>>> 799d804985fca710084fa8e49b32d7d926119121
 }
 
 .plus-btn {
@@ -366,6 +352,7 @@ fieldset[disabled] .form-control {
     margin-left: .5em;
     font-size: 10px;
     color: #1693a5;
+    cursor:pointer;
 }
 
 
@@ -533,7 +520,9 @@ fieldset[disabled] .form-control {
     line-height: 1.428571429;
     border-radius: 15px;
 }
-
+.hr-print{
+    display: none;
+}
 .btn-circle.btn-lg {
     outline: none;
     width: 50px;
@@ -570,8 +559,6 @@ fieldset[disabled] .form-control {
     color: #00b6ff;
 }
 
-<<<<<<< HEAD
-=======
 /* Dropdown Button */
 .dropbtn {
     color: grey;
@@ -620,20 +607,114 @@ fieldset[disabled] .form-control {
 .dropdown-display p:hover{
     background-color: #f5f5f5;
 }
- /*Links inside the dropdown 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}*/
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
 
->>>>>>> 799d804985fca710084fa8e49b32d7d926119121
+@media (max-width: 1350px){
+    .daterangepicker .ranges ul {
+        width: 112px;
+    }
+}
+
+/*/////////  Animate icon checked  ///////*/
+
+.wrapper{
+  width: 100px;
+  margin: 4em auto 0;
+}
+
+.checkmark {
+  stroke: green;
+  stroke-dashoffset: 745.74853515625;
+  stroke-dasharray: 745.74853515625;
+  animation: dash 2s ease-out forwards infinite;
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 745.74853515625;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@page {
+  size: auto;
+  margin: 5mm;
+  
+ 
+}
+
 @media print {
+    html,body{
+         height: auto !important; 
+    }
+
+    .graph2 {
+        width: 65% !important;
+        float:left;
+    }
+    .graph3  {
+        width: 35% !important;
+        float:left;
+     } 
+    .question{
+        page-break-after:always;
+    }
+    .calendar{
+        width: 100%;
+        border: none;
+        appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        font-weight: 800;
+        font-size: 30px;
+        
+    }
+    .date-picker{
+        border: none;
+    }
+    .selector-form{
+         appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        width: 100%;
+    }
+    .selector-form > .panel , .panel , .panel-body{
+        border: none;
+    }
+    .selector-form > .panel > .panel-heading{
+         display: none !important; 
+    }
+    .control-label{
+         clear:both;
+         display: block;
+    }
+    .branch-style{
+        display: inline;
+        width:30%;
+        float: left;
+    }
+    .minus-btn{
+        display: none;
+    }
+    #display-section-af-search ,  .export-btn{
+        display: none !important;
+    }
+    .graph1{
+        width: 100% !important;    
+    }
+    .hr-print{
+        display: block !important;
+        margin-top: -1em;
+    }
+  
+    .progress-panel{
+        height: 100% !important;    
+    }
     .progress {
         background-color: #F5F5F5 !important;
         -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#F5F5F5', endColorstr='#F5F5F5')" !important;
@@ -653,9 +734,6 @@ fieldset[disabled] .form-control {
         box-shadow: inset 0 0 !important;
         -webkit-box-shadow: inset 0 0 !important;
     }
-}
-
-@media print {
     .no-print {
         display: none !important;
     }
@@ -663,24 +741,16 @@ fieldset[disabled] .form-control {
     .filterBtnPanel,
     .scroll {
         display: none;
-    }
+    }   
     .panel-body {
         position: relative;
         left: 0;
     }
     .form-control {
-        border: 0;
-        padding: 0;
-        overflow: visible;
+        border: none;
+        appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
     }
-<<<<<<< HEAD
-=======
-}
-
-
-@media (max-width: 1350px){
-    .daterangepicker .ranges ul {
-        width: 112px;
-    }
->>>>>>> 799d804985fca710084fa8e49b32d7d926119121
+    
 }
