--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,42 @@
     src: url("../fonts/ThaiSansNeue-ExtraBold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
+    
 }
+
 body {
     -webkit-font-smoothing: subpixel-antialiased;
-    text-rendering:optimizeLegibility;
-    -webkit-text-stroke:1px transparent;
+    text-rendering: optimizeLegibility;
+    -webkit-text-stroke: 1px transparent;
 }
-* {-webkit-font-smoothing:subpixel-antialiased;text-rendering:optimizeLegibility;-webkit-text-stroke:1px transparent;}
-.avia-safari body,.avia-mozilla body { -webkit-font-smoothing: subpixel-antialiased; }
-b, strong {
-    font-weight: 500 ;
+
+* {
+    -webkit-font-smoothing: subpixel-antialiased;
+    text-rendering: optimizeLegibility;
+    -webkit-text-stroke: 1px transparent;
+}
+html,body{
+    height:100%;
+}
+#wrap {
+    height: auto;
+    min-height: 100%;
+}
+#footer { 
+    position: relative;
+    margin-top:-1.5em;
+    text-align: center;
+    color:#777777;
+} 
+
+.avia-safari body,
+.avia-mozilla body {
+    -webkit-font-smoothing: subpixel-antialiased;
+}
+
+b,
+strong {
+    font-weight: 500;
 }
 
 p,
@@ -72,11 +98,11 @@ hr {
     cursor: pointer;
 }
 
-.date-picker{
-    background: #fff; 
-    cursor: pointer; 
-    padding: 5px 10px; 
-    border: 1px solid #ccc; 
+.date-picker {
+    background: #fff;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
     width: 100%
 }
 
@@ -91,6 +117,8 @@ hr {
     color: #777777;
 }
 
+
+/*
 .card {
     font-size: 1em;
     overflow: auto;
@@ -101,7 +129,7 @@ hr {
     background: white;
     height: 300px;
     position: relative;
-}
+}*/
 
 .card-block {
     font-size: 1em;
@@ -121,6 +149,14 @@ hr {
     position: absolute;
     right: 0;
     bottom: 0;
+}
+.color-bar{
+    width:100%;
+    height: 5px;
+    background: #4BAEB6;  /* fallback for old browsers */
+
+
+    
 }
 
 .form-control[disabled],
@@ -143,6 +179,7 @@ fieldset[disabled] .form-control {
 .progress-number {
     margin-top: 15px;
     text-align: right;
+    padding:0;
 }
 
 .progress-value {
@@ -352,7 +389,7 @@ fieldset[disabled] .form-control {
     margin-left: .5em;
     font-size: 10px;
     color: #1693a5;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 
@@ -520,9 +557,11 @@ fieldset[disabled] .form-control {
     line-height: 1.428571429;
     border-radius: 15px;
 }
-.hr-print{
+
+.hr-print {
     display: none;
 }
+
 .btn-circle.btn-lg {
     outline: none;
     width: 50px;
@@ -559,7 +598,9 @@ fieldset[disabled] .form-control {
     color: #00b6ff;
 }
 
+
 /* Dropdown Button */
+
 .dropbtn {
     color: grey;
     padding: 2px;
@@ -567,190 +608,181 @@ fieldset[disabled] .form-control {
     border: none;
     cursor: pointer;
 }
-.drop-div{
+
+.drop-div {
     float: right;
 }
+
+
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  color: #e9e9e9;
+
+.dropbtn:hover,
+.dropbtn:focus {
+    color: #e9e9e9;
 }
 
+
 /* The container <div> - needed to position the dropdown content */
+
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
+
 /* Dropdown Content (Hidden by Default) */
+
 .dropdown-content {
     display: none;
-   
 }
-.dropdown-display{
-     position: absolute;
+
+.dropdown-display {
+    position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0 3px 2px rgba(0, 0, 0, .3);
     z-index: 1;
     right: 0;
-    top:50px;
+    top: 50px;
 }
+
 .dropdown-display p {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    cursor:pointer;
-    outline : none;
-
+    cursor: pointer;
+    outline: none;
 }
-.dropdown-display p:hover{
+
+.dropdown-display p:hover {
     background-color: #f5f5f5;
 }
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
 
-@media (max-width: 1350px){
+
+/* Change color of dropdown links on hover */
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+
+.show {
+    display: block;
+}
+
+@media (max-width: 1350px) {
     .daterangepicker .ranges ul {
         width: 112px;
     }
 }
 
+
 /*/////////  Animate icon checked  ///////*/
 
-.wrapper{
-  width: 100px;
-  margin: 4em auto 0;
-}
+.wrapper {
+    width: 30px;
+    }
 
 .checkmark {
-  stroke: green;
-  stroke-dashoffset: 745.74853515625;
-  stroke-dasharray: 745.74853515625;
-  animation: dash 2s ease-out forwards infinite;
+    stroke: green;
+    stroke-dashoffset: 745.74853515625;
+    stroke-dasharray: 745.74853515625;
+    -webkit-animation: dash 2s ease-out forwards;
+            animation: dash 2s ease-out forwards;
 }
 
 @keyframes dash {
-  0% {
-    stroke-dashoffset: 745.74853515625;
-  }
-  100% {
-    stroke-dashoffset: 0;
-  }
+    0% {
+        stroke-dashoffset: 745.74853515625;
+    }
+    100% {
+        stroke-dashoffset: 0;
+    }
+}
+@-webkit-keyframes dash {
+    0% {
+        stroke-dashoffset: 745.74853515625;
+    }
+    100% {
+        stroke-dashoffset: 0;
+    }
 }
 
-@page {
-  size: auto;
-  margin: 5mm;
-  
- 
+
+.flip-btn{
+    float:right; font-size:17px; margin-top:.2em; color:#4BAEB6;cursor:pointer;
+}
+.flip-btn:hover{
+      text-decoration: underline;
+}
+/*FLIP*/
+
+.flip {
+    -webkit-perspective: 800;
+    perspective: 800;
+    position: relative;
+    transform-style: preserve-3d;
 }
 
-@media print {
-    html,body{
-         height: auto !important; 
-    }
+.flip .card.flipped {
+    transform-style: preserve-3d;
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
 
-    .graph2 {
-        width: 65% !important;
-        float:left;
-    }
-    .graph3  {
-        width: 35% !important;
-        float:left;
-     } 
-    .question{
-        page-break-after:always;
-    }
-    .calendar{
-        width: 100%;
-        border: none;
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        font-weight: 800;
-        font-size: 30px;
-        
-    }
-    .date-picker{
-        border: none;
-    }
-    .selector-form{
-         appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        width: 100%;
-    }
-    .selector-form > .panel , .panel , .panel-body{
-        border: none;
-    }
-    .selector-form > .panel > .panel-heading{
-         display: none !important; 
-    }
-    .control-label{
-         clear:both;
-         display: block;
-    }
-    .branch-style{
-        display: inline;
-        width:30%;
-        float: left;
-    }
-    .minus-btn{
-        display: none;
-    }
-    #display-section-af-search ,  .export-btn{
-        display: none !important;
-    }
-    .graph1{
-        width: 100% !important;    
-    }
-    .hr-print{
-        display: block !important;
-        margin-top: -1em;
-    }
-  
-    .progress-panel{
-        height: 100% !important;    
-    }
-    .progress {
-        background-color: #F5F5F5 !important;
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#F5F5F5', endColorstr='#F5F5F5')" !important;
-    }
-    .progress-bar-info {
-        display: block !important;
-        background-color: #5BC0DE !important;
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#5BC0DE', endColorstr='#5BC0DE')" !important;
-    }
-    .progress-bar {
-        background-color: #96CFEA !important;
-    }
-    .progress,
-    .progress>.progress-bar {
-        display: block !important;
-        -webkit-print-color-adjust: exact !important;
-        box-shadow: inset 0 0 !important;
-        -webkit-box-shadow: inset 0 0 !important;
-    }
-    .no-print {
-        display: none !important;
-    }
-    .panel-footer,
-    .filterBtnPanel,
-    .scroll {
-        display: none;
-    }   
-    .panel-body {
-        position: relative;
-        left: 0;
-    }
-    .form-control {
-        border: none;
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-    }
+.flip .card {
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: 0.5s;
+    transform-style: preserve-3d;
+    transition: 0.5s;
+}
+
+.flip .card .face {
+    transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    z-index: 2;
+}
+
+.flip .card .front {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+}
+
+.flip .card .back {
+    transform-style: preserve-3d;
+    -webkit-transform: rotatey(180deg);
+    transform: rotatey(180deg);
+}
+
+.color-love{
+    background-color: #004384;
+}
+.color-like{
+    background-color: #96cfea;
+}
+.color-normal{
+    background-color: #f0c514;
+}
+.color-dislike{
+    background-color: #e67e22;
+}
+.color-upset{
+    background-color: #e84c3c;
+}
+
+
+.emotion-progress{
+    max-width: 20px;
+}
+
+.footer{
+    position: relative;
+    left:0;
+    bottom: 0;
     
 }
