--- a/css/print.css
+++ b/css/print.css
@@ -31,6 +31,26 @@ span {
     margin: 0;
 }
 
+thead {
+    font-weight: 300;
+}
+
+td {
+    text-align: center;
+    font-family: 'CSChatThai';
+    border: 1px #cacaca solid;
+    min-width: 30px;
+}
+
+.total-summary {
+    border-bottom: double 2px #777777 !important;
+}
+
+.border-disable td {
+    border: none;
+    font-weight: 500;
+}
+
 .page {
     background: white;
     border: 1px solid grey;
@@ -47,10 +67,213 @@ span {
     margin-top:.45em;
     }
 
+.margin-top-1 {
+    margin-top: 1em;
+}
+.margin-top-2 {
+    margin-top: 2em;
+}
+.margin-top-4 {
+    margin-top: 4em;
+}
+
 .margin-left{
     margin-left: 1em;
 }
+.margin-left-05{
+    margin-left: .5em;
+}
+
+.dashboard-stat {
+    display: block;
+    margin-bottom: 1em;
+    overflow: hidden;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 0px;
+}
+.dashboard-stat .visual {
+    width: 60px;
+    height: 60px;
+    display: block;
+    float: right;
+    padding-top: 5px;
+    padding-left: 6px;
+    font-size: 35px;
+    line-height: 35px;
+}
+.dashboard-stat .details {
+   
+    position: relative;
+    left: 0;
+    padding-right: 15px;
+    padding-top: 3px;
+    color:white ;
+}
+.text-stat{
+    color:white !important;
+}
+.text-percent{
+    float: right;
+    font-size: 38px;
+    margin-right:.15em
+}
+.dashboard-stat .details .number {
+    color: white;
+    text-align: left;
+    line-height: 36px;
+    letter-spacing: -1px;
+    margin-bottom: 0px;
+    margin-left:1em;
+    font-weight: 300;
+}
+.dashboard-stat .details .number h1{
+    font-size: 30px;
+    margin-left:9px;
+}
+.dashboard-stat .details h3{
+    font-size: 20px;
+}
+.dashboard-stat .details .desc {
+    color: #FFFFFF !important;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.dashboard-stat .details .desc {
+    font-size:22px;
+    margin-left:.3em;
+    text-align: left;
+    font-size: 16px;
+    letter-spacing: 0px;
+    font-weight: 300;
+}
+.dashboard-stat .visual > img {
+    color: #FFFFFF;
+    opacity: 0.2;
+    filter: alpha(opacity=20);
+}
+.dashboard-stat .visual > img {
+    margin-left: -11px;
+    font-size: 88px;
+    line-height: 99px;
+}
+.dashboard-stat.red-intense {
+    outline: none;
+    background-color: #4baeb6 !important;
+}
+
+
+.border-right {
+    border-right: 1.5px solid grey !important;
+}
+
+.m-24-1,
+.m-23-1,
+.m-22-1,
+.m-21-1,
+.m-20-1,
+.m-19-1,
+.m-18-1,
+.m-17-1,
+.m-16-1,
+.m-15-1,
+.m-14-1,
+.m-13-1,
+.m-12-1,
+.m-11-1,
+.m-10-1,
+.m-9-1,
+.m-8-1,
+.m-7-1,
+.m-6-1,
+.m-5-1,
+.m-4-1,
+.m-3-1,
+.m-2-1,
+.m-1-1 {
+    border-right: 1.5px solid grey !important;
+}
+
+.f-24-1,
+.f-23-1,
+.f-22-1,
+.f-21-1,
+.f-20-1,
+.f-19-1,
+.f-18-1,
+.f-17-1,
+.f-16-1,
+.f-15-1,
+.f-14-1,
+.f-13-1,
+.f-12-1,
+.f-11-1,
+.f-10-1,
+.f-9-1,
+.f-8-1,
+.f-7-1,
+.f-6-1,
+.f-5-1,
+.f-4-1,
+.f-3-1,
+.f-2-1,
+.f-1-1 {
+    border-right: 1.5px solid grey !important;
+}
+
+.u-24-1,
+.u-23-1,
+.u-22-1,
+.u-21-1,
+.u-20-1,
+.u-19-1,
+.u-18-1,
+.u-17-1,
+.u-16-1,
+.u-15-1,
+.u-14-1,
+.u-13-1,
+.u-12-1,
+.u-11-1,
+.u-10-1,
+.u-9-1,
+.u-8-1,
+.u-7-1,
+.u-6-1,
+.u-5-1,
+.u-4-1,
+.u-3-1,
+.u-2-1,
+.u-1-1 {
+    border-right: 1.5px solid grey !important;
+}
+.export-btn{
+    cursor:pointer;position:fixed;right:30px;top:30px;
+}
+.showprint{
     
+    margin:.4em;
+    clear: both;
+    margin-right:1.5em;
+    margin-left:1.5em;
+}
+.header{
+    display: inline-flex !important;
+    width: 100%;
+}
+.header > div {
+
+    /*display: inline-block;*/
+    width:50%;
+}
+.header > .showprint{
+    display: block;
+}
+.showprint-dis{
+    display: none;
+}
 @page {
     size: auto;
     margin: 5mm;
@@ -60,17 +283,30 @@ span {
         border: none;
         margin: 0;
         box-shadow: 0;
+    }   
+    b{
+        font-weight: 500;
     }
+   
     html,
     body {
         height: auto !important;
         -webkit-print-color-adjust: exact;
+        color-adjust: exact;
+        
     }
     thead {
         display: table-header-group;
     }
     tfoot {
         display: table-footer-group
+    }
+    .showprint-dis{
+        display: block;
+
+    }
+    .export-btn{
+        display: none;
     }
     .graph2 {
         width: 65% !important;
@@ -81,193 +317,28 @@ span {
         float: left;
     }
     .question {
-        margin-top:10em !important;
+        margin-top:150px !important;
+        border-top:1px solid #eee;
+        padding-top:10px;
         page-break-before: always;
-        
     }
-    .branch-style {
-        display: inline;
-        width: 30%;
-        float: left;
-    }
-    .calendar {
-        width: 100%;
+  
+    .header {
         border: none;
         appearance: none;
         -moz-appearance: none;
         -webkit-appearance: none;
-        font-weight: 800;
-        font-size: 30px;
-
         box-decoration-break: clone;
         position: fixed;
         display: block;
         width: 100%;
         height: auto;
         top: 0;
-    }
-    /*.label-filter{
-
-        position: relative ;
-        top: 80px !important;
-        float : left;
-    }*/
-    .label-filter{
-        position: relative !important;
-        top:30px !important;
-        margin-left:-1em;
+        padding-right: 1em;
     }
 
-    .col-branch::after {
-        content: " , ";
-        font-weight: 800;
-        position: absolute;
-        margin-top: -2em !important;
-        margin-left:10em !important;
-      
-    }
-   
-
-    .values,.branchs{
-
-        position: relative !important;
-        margin-left:4em !important;
-        margin-top:-1em !important;
-        width:auto !important ;
-        clear:both;
-
-    }
-    .filter-div{
-        margin: 0 !important;
-        margin-top:-.5em !important;
-        margin-bottom : -1em !important; 
-    }
-    .branch-style{
-        border: none;
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-
-        box-decoration-break: clone;
-        position: fixed;
-        display: block;
-        width: 100%;
-        height: auto;
-        top: 45px;
-        float: left;
-        margin-left: 3em !important;
-    }
-    .control-label{
-        border: none;
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        box-decoration-break: clone;
-        position: fixed;
-        display: block;
-        width: 100%;
-        height: auto;
-        top: 50px;
-        float:left;
-
-    }
-
-    .date-picker {
-        border: none;
-    }
-    .selector-form {
-
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        width: 100%;
-
-    }
-    .selector-form>.panel,
-    .panel,
-    .panel-body {
-        border: none;
-    }
-    .selector-form>.panel>.panel-heading {
-        display: none !important;
-    }
-   
-    .minus-btn {
-        display: none;
-    }
-    #display-section-af-search,
-    .export-btn {
-        display: none !important;
-    }
-    .graph1 {
-        width: 100% !important;
-    }
-    .hr-print {
-        display: block !important;
-        margin-top: 0em;
-        box-decoration-break: clone;
-        position: fixed;
-        display: block;
-        width: 100%;
-        height: auto;
-       
-    }
-    .progress-panel {
-        height: 100% !important;
-    }
-    .progress {
-        background-color: #F5F5F5 !important;
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#F5F5F5', endColorstr='#F5F5F5')" !important;
-    }
-    .progress-bar-info {
-        display: block !important;
-        background-color: #5BC0DE !important;
-        -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#5BC0DE', endColorstr='#5BC0DE')" !important;
-    }
-    .progress-bar {
-        background-color: #96CFEA !important;
-    }
-    .progress,
-    .progress>.progress-bar {
-        display: block !important;
-        -webkit-print-color-adjust: exact !important;
-        box-shadow: inset 0 0 !important;
-        -webkit-box-shadow: inset 0 0 !important;
-    }
-    .no-print {
-        display: none !important;
-    }
-    .panel-footer,
-    .filterBtnPanel,
-    .scroll {
-        display: none;
-    }
-    /*.panel-body {
-        position: relative;
-        left: 0;
-    }*/
-    .form-control {
-        border: none;
-        appearance: none;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-    }
-    .flip-btn{
-        display: none;
-    }
-    .summary-pane {
-        float: left;
-    }
-    .progress-panel{
-        margin:0;
-    }
-    .emotion-progress{
-        max-width:20px !important;
-        position: fixed;
-        right:0;
-    }
-    #footer{
-        display: none;
+    .break-header{
+        margin-top:120px;
     }
 }
 
