--- a/css/style.css
+++ b/css/style.css
@@ -665,13 +665,15 @@ fieldset[disabled] .form-control {
 .dropdown-content a:hover {
     background-color: #f1f1f1
 }
+.display-show{
+    display: block;
+}
+.display-hide{
+    display: none;
+}
 
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-
-.show {
-    display: block;
-}
 
 @media (max-width: 1350px) {
     .daterangepicker .ranges ul {
